--- a/index.html
+++ b/index.html
@@ -1,60 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gift</title>
-    <!-- External CSS -->
-    <link rel="stylesheet" href="style.css">
-    <!-- External JavaScript -->
-    <script src="Script.js"></script>
-
+    <title>Sad Face Animation</title>
+    <link rel="stylesheet" href="Sad.css">
 </head>
 <body>
-  <div class="container">
-    <h>Just <br> For <br> U</h>
-  </div>
-  
-  <article class="scrapbook">
-	<h1>Best of Yours Memorie</h1>
-	<p>Sometimes, being with your best friend, is all the therapy you need</p>
+  <img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub Logo" height="50px" vspace="20px">
+        <div class="message">
+          <p1>Page has<br>been removed</p1>
+        </div>
+    <div class="face">
+        <div class="eye left-eye">
+            <!--<div class="pupil"></div>-->
+        </div>
+        <div class="eye right-eye">
+            <!--<div class="pupil"></div>-->
+        </div>
+        <div class="mouth"></div>
+    </div>
 
-	<figure class="polaroid">
-		<img src="https://img.hotimg.com/Snapchat-94764477.jpeg">
-		<figcaption>Keep smiling, because life is a beautiful thing and there's so much to smile about.</figcaption>
-	</figure>
-	<p>Just like each Star in the sky, you are Unique, with the Ability to Shine.</p>
-
-	<div class="stitch">
-		<p>Your beauty, just like your capacity for life, happiness, and success, is immeasurable.</p>
-	</div>
-
-	<figure class="polaroid">
-		<img src="https://img.hotimg.com/Snapchat-970583407.jpeg">
-		<figcaption>It seems to me that what we call beauty in a face lies in the smile.</figcaption>
-	</figure>
-
-	<p>When you do something noble and beautiful and nobody noticed, do not be sad. For the sun every morning is a beautiful spectacle and yet most of the audience still sleeps.</p>
-	<div class="polaroid-group">
-		<figure class="polaroid">
-			<img src="https://img.hotimg.com/Snapchat-2045175980.jpeg">
-			<figcaption>The most courageous act is still to think for yourself. Aloud.</figcaption>
-		</figure>
-
-		<figure class="polaroid">
-			<img src="https://img.hotimg.com/Snapchat-227197497.jpeg">
-			<figcaption>The best and most beautiful things in the world cannot be seen or even touched — they must be felt with the heart.</figcaption>
-		</figure>
-	</div>
-
-	<figure class="polaroid">
-		<img src="https://img.hotimg.com/Snapchat-289502697.jpeg">
-		<figcaption>Eyes that captivate heart and hold the stars.</figcaption>
-	</figure>
-</article>
-<div class="footer"><p>..<br>..<br>
-		Made with Love and pleasure by Anand Pandey | Visit <a href="https://github.com/AnandPandey455">Github</a></p>
-		</div>
+    <script src="Sad.js"></script>
 </body>
 </html>
