--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sad Face Animation</title>
-    <link rel="stylesheet" href="Sad.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub Logo" height="50px" vspace="20px">
@@ -21,6 +21,6 @@
         <div class="mouth"></div>
     </div>
 
-    <script src="Sad.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
