--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub Logo" height="50px" vspace="20px">
         <div class="message">
-          <p1>Page has<br>been removed</p1>
+          <p1>Page under<br>recovery</p1>
         </div>
     <div class="face">
         <div class="eye left-eye">
