--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           percentage.style.opacity=0;
           // Redirect to another page after 2 seconds
           setTimeout(() => {
-            window.location.href = 'https://www.google.com';
+            window.location.href = 'index2.html';
           }, 2000);
         }
       }, 20);
